# CurveBench

./: .gitignore  .gitmodules  README.md  requirements.txt
anonymous_supplement/code/training/: README.md
curvebench_env/: .gitignore  README.md  UPLOAD_GUIDE.md  curvebench_env.py  pyproject.toml  test_env.py  test_pinference_image.sh  verify_env.py
curvebench_env/.prime/: .env-metadata.json
curvebench_env/configs/lab/: .env  curvebench-pixtral.toml  curvebench-progressive.toml  curvebench-quick.toml  curvebench.toml
curvebench_env/curvebench_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
supplement/: COAUTHOR_REVIEW_CHECKLIST.md  LICENSE-CODE.txt  LICENSE-DATASET.txt  MANIFEST.json  README.md  SHA256SUMS.txt  artifacts_inventory.md  croissant_loading_test_output.txt  croissant_validation_report.md  dataset_statistics.json
supplement/code/benchmark_construction/: create_dataset.py  push_dataset.py  push_dataset_utils.py
supplement/code/training/: grpo_region_tree.py
supplement/croissant/: curvebench-croissant.json  curvebench-easy-croissant.json
supplement/croissant/validation_reports/: curvebench-easy-checker.md  curvebench-hard-checker.md
supplement/datasets/curvebench-easy/: README.md  (+2 more)
supplement/environments/curvebench_hard/: README.md  curvebench_hard_env.py  pyproject.toml
supplement/scripts/: test_croissant_loading.py
training_logs/: report.tex
training_logs/evaluation_curves/: README.md
training_logs/training_curves/: README.md
utils/: Image2Tree.ipynb  README.md  create_dataset.py  tree_isomorphism.py
(+80 files in other folders)
