[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "curvebench-hard-env"
version = "0.1.1"
description = "CurveBench-Hard: Vision-language model evaluation for hierarchical tree structure extraction from complex images"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.0",
    "datasets>=2.14.0",
    "Pillow>=9.5.0",
    "networkx>=3.0.0",
]
keywords = ["vision-language", "multimodal", "tree-structure", "hierarchical", "evaluation"]
authors = [
    {name = "Amir Mohseni", email = "amir.mohseni@student.maastrichtuniversity.nl"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

tags = ["vision-language", "multimodal", "evaluation", "tree-structure"]

[project.optional-dependencies]
dev = []

[tool.verifiers.eval]
sampling_args = { enable_multimodal = true }

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["curvebench_hard_env.py"]
